syntax = "proto3";
package quip.matchmaker.internal;
option go_package="github.com/GambitLLC/quip/libs/matchmaker/internal/ipb";

// Internal message for holding relevant player information.
// Placed in statestore.
message PlayerDetails {
  string player_id = 1;

  optional string ticket_id = 2;

  optional string match_id = 3;
}

// Internal message for holding relevant ticket information.
// Placed under Extensions on Open Match tickets.
message TicketDetails {
  string player_id = 1;

  string gamemode = 2;
}

// Internal message for holding relevant match profile information.
// Placed under Extensions on Open Match tickets.
message ProfileDetails {
  // Name of the current gamemode.
  string gamemode = 1;

  // Number of teams in the match.
  uint32 teams = 2;

  // Number of players per team.
  uint32 players = 3;
}

// Internal message for holding details about an ongoing match.
// Placed in statestore.
message MatchDetails {
  string match_id = 1;
  string connection = 2;

  repeated string players = 3;
}